Mejora en el manejo del script quitamos algunas limitaciones
